fix: too much whitespace above contact received message

--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -48,9 +48,6 @@ main {
     padding-top: 10px;
     padding-bottom: 10px;
 }
-.contact-container {
-    margin-top: 250px;
-}
 .scrolling-anchor {
     margin-bottom: 30px;
     font-size: 0;
